# asitlorbot8_ws

./: .~lock.data5.xlsx#  .~lock.pose_and_data7.xlsx#  README.md  data5.xlsx  data_7.xlsx  data_77.xlsx  frames_2024-05-06_09.37.47.gv  frames_2024-05-06_09.41.07.gv  frames_2024-05-06_09.51.27.gv  frames_2024-05-06_10.22.40.gv  frames_2024-05-06_12.04.39.gv  frames_2024-05-06_12.59.11.gv  frames_2024-05-07_11.18.50.gv  frames_2024-05-07_11.54.16.gv  frames_2024-05-07_12.17.02.gv  frames_2024-05-08_09.55.44.gv  frames_2024-05-08_09.59.39.gv  frames_2024-05-08_10.02.36.gv  frames_2024-05-08_10.05.10.gv  frames_2024-05-08_10.55.51.gv  frames_2024-05-08_11.45.58.gv  frames_2024-05-08_11.48.05.gv  frames_2024-05-08_12.01.49.gv  frames_2024-05-08_12.05.27.gv  frames_2024-05-10_18.05.37.gv  frames_2024-05-10_18.10.19.gv  frames_2024-05-10_18.22.56.gv  frames_2024-05-24_15.47.16.gv  frames_2024-05-26_14.28.29.gv  frames_2024-06-04_12.33.25.gv  frames_2024-06-04_12.33.58.gv  frames_2024-06-05_11.37.29.gv  frames_2024-06-05_15.12.17.gv  frames_2024-06-06_10.21.43.gv  frames_2024-06-06_16.27.15.gv  frames_2024-06-06_16.31.47.gv  my_map_save_3_may.pgm  my_map_save_3_may.yaml  my_map_save_7_may.pgm  my_map_save_7_may.yaml  (+7 more)
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build  latest_list
src/: data5.xlsx  data_7.ods
src/motor_control_pkg/: package.xml  setup.cfg  setup.py
src/motor_control_pkg/motor_control_pkg/: arduino_serial_node.py  encoder_subscriber_node.py  motor_control_node.py
src/motor_control_pkg/motor_ino/pid_ino/: pid_ino.ino
(+308 files in other folders)
